@@ -2,11 +2,15 @@ package servis;
 
 import bank.Storage;
 import model.Card;
+import model.Client;
+import model.RegularCard;
 import model.Transaction;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class OperationServiceImpl implements OperationService {
 
@@ -18,9 +22,13 @@ public class OperationServiceImpl implements OperationService {
         if (clientCardOptional.isPresent()){
             clientCard = clientCardOptional.get();
             clientCard.increaseAmount(amount);
-            Transaction transaction = new Transaction("001", "deposit", amount, null, clientCard.getOwner(),null, cardNumber,LocalDateTime.now());
+
+            Transaction transaction = new Transaction("001", "deposit", amount, null, clientCard.getOwner(),null, cardNumber, LocalDateTime.now());
             clientCard.addTransaction(transaction);
+        } else {
+            Storage.increaseBankBalance(getEvaluatedAmount(5, amount));
         }
+
     }
 
     @Override
@@ -30,14 +38,53 @@ public class OperationServiceImpl implements OperationService {
         if (clientCardOptional.isPresent()){
             clientCard = clientCardOptional.get();
             clientCard.decreaseAmount(amount);
-            Transaction transaction = new Transaction("001", "deposit", amount, null, clientCard.getOwner(),null, cardNumber,LocalDateTime.now());
+
+            Transaction transaction = new Transaction("001", "withdraw", amount, clientCard.getOwner(),null, cardNumber, null, LocalDateTime.now());
             clientCard.addTransaction(transaction);
+        } else {
+            Storage.increaseBankBalance(getEvaluatedAmount(10, amount));
         }
     }
 
     @Override
-    public void transfer(String cardNumberFrome, String cardNumberTo, Double amount) {
+    public void transfer(String cardNumberFrom, String cardNumberTo, Double amount) {
+        Optional<Card> clientCardFromOptional = getCardByNumber(cardNumberFrom);
+        Optional<Card> clientCardToOptional = getCardByNumber(cardNumberTo);
 
+        Card clientCardFrom = null;
+        Card clientCardTo = null;
+        if (clientCardFromOptional.isPresent()){
+            clientCardFrom = clientCardFromOptional.get();
+            clientCardFrom.decreaseAmount(amount);
+        }
+
+        if (clientCardToOptional.isPresent()){
+            clientCardTo = clientCardToOptional.get();
+            clientCardTo.increaseAmount(amount);
+        }
+
+        Client clientFrom = Objects.nonNull(clientCardFrom) ? clientCardFrom.getOwner() : null;
+        Client clientTo = Objects.nonNull(clientCardTo) ? clientCardTo.getOwner() : null;
+        Transaction transaction = new Transaction("001", "transfer", amount, clientFrom,clientTo, cardNumberFrom, cardNumberTo, LocalDateTime.now());
+
+        if(Objects.nonNull(clientCardFrom)){
+            clientCardFrom.addTransaction(transaction);
+        }
+
+        if(Objects.nonNull(clientCardTo)){
+            clientCardTo.addTransaction(transaction);
+        }
+
+        Integer commission = clientCardFrom.getTransferCommission();
+        if(!commission.equals(0)) {
+            Double commissionAmount = getEvaluatedAmount(commission, amount);
+            clientCardFrom.decreaseAmount(commissionAmount);
+            Storage.increaseBankBalance(commissionAmount);
+
+            Transaction transactionCommission = new Transaction("001", "transferCommission", commissionAmount, clientFrom, null, cardNumberFrom, "bank", LocalDateTime.now());
+            clientCardFrom.addTransaction(transactionCommission);
+
+        }
     }
 
     private Optional<Card> getCardByNumber(String number){
@@ -45,6 +92,10 @@ public class OperationServiceImpl implements OperationService {
 
         return Optional.of(cards.stream()
                 .filter(card -> card.getCardNumber().equals(number))
-                .toList().get(0));
+                .collect(Collectors.toList()).get(0));
+    }
+
+    private Double getEvaluatedAmount(Integer percent, Double amount){
+        return (amount * percent) / 100;
     }
 }
